【ADD】 新增创建者模式之原型模式

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>design-cp01-demo01</module>
         <module>design-cp01-demo02</module>
         <module>design-cp01-demo03</module>
+        <module>design-cp01-demo04</module>
     </modules>
 
     <dependencies>
